--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stelysheet" href="style.css"
 </head>
 <body>
+
+    <section class="principal"
+    
     <h1>Com o Combo+, você pode apreveitar a Alura+ e o Alura Língua por um preço único</h1>
+    <img src="Combo.png"alt="O combo+ é a Junção do alura+ e o alura lingua"
+
 </body>
+
 </html>
