--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 
     <div class="container_caixa">
     <h1>Com o Combo+, você pode apreveitar a Alura+ e o Alura Língua por um preço único</h1>
-    <img src="Combo.png"alt="O combo+ é a Junção do alura+ e o alura lingua" class="container_imagem">
+    <img src="Combo.png"alt="O combo+ é a Junção do alura+ e o alura lingua" 
+    class="container_imagem">
     <a href="www.alura.com.br" class="container_botao">assine por 12x de R$ 120,00*</a>
     <a href="www.alura.com.br" class="container_botao botao_secundario">assinar somente o Alura+</a>
     <p class="container_aviso"> O preço pode variar aso a assinatura seja feita em outros planos.</p>
 </div>
+
 </section>
 
 </body>
-
 </html>
