--- a/index.html
+++ b/index.html
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
 <html lang="PT-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alura Plus</title>
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
 
-    <section class="container principal"
+    <section class="container principal" <div class="container_caixa">
+        <div>
+        <h1>Com o Combo+, você pode apreveitar a Alura+ e o Alura Língua por um preço único</h1>
+        <img src="Combo.png" alt="O combo+ é a Junção do alura+ e o alura lingua" class="container_imagem">
+        <a href="www.alura.com.br" class="container_botao">assine por 12x de R$ 120,00*</a>
+        <a href="www.alura.com.br" class="container_botao botao_secundario">assinar somente o Alura+</a>
+        <p class="container_aviso"> O preço pode variar aso a assinatura seja feita em outros planos.</p>
+        </div>
+    </section>
 
-    <div class="container_caixa">
-    <h1>Com o Combo+, você pode apreveitar a Alura+ e o Alura Língua por um preço único</h1>
-    <img src="Combo.png"alt="O combo+ é a Junção do alura+ e o alura lingua" 
-    class="container_imagem">
-    <a href="www.alura.com.br" class="container_botao">assine por 12x de R$ 120,00*</a>
-    <a href="www.alura.com.br" class="container_botao botao_secundario">assinar somente o Alura+</a>
-    <p class="container_aviso"> O preço pode variar aso a assinatura seja feita em outros planos.</p>
-</div>
+    <section class="container secundario"> 
+        <img src="Plataformas.png" alt="Um monitor e um celular com alura plus aberta" class="secundario__imagem">
+        <div class="container__descricao">
+            <h2 class="descricao__texto">Assista do seu jeito</h2>
+            <p class="descricao__texto">Aproveita a tela grande da TV ou assista no Tablet, Laptop, Celular e outros aparelhos. Nossa seleção de cursos não para de crescer</p>
 
-</section>
+        </div>
+
+       
+    </section>
 
 </body>
+
 </html>
