--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="container secundario"> 
         <img src="Plataformas.png" alt="Um monitor e um celular com alura plus aberta" class="secundario__imagem">
         <div class="container__descricao">
-            <h2 class="descricao__texto">Assista do seu jeito</h2>
+            <h2 class="descricao__titulo">Assista do seu jeito</h2>
             <p class="descricao__texto">Aproveita a tela grande da TV ou assista no Tablet, Laptop, Celular e outros aparelhos. Nossa seleção de cursos não para de crescer</p>
 
         </div>
