--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
         <img src="Plataformas.png" alt="Um monitor e um celular com alura plus aberta" class="secundario_imagem">
         <div class="container_descricao">
             <h2 class="descricao_titulo">Assista do seu jeito</h2>
-            <p class="descricao_texto">Aproveita a tela grande da TV ou assista no Tablet, Laptop, Celular e outros aparelhos. Nossa seleção de cursos não para de crescer</p>
+            <p class="descricao_texto">Aproveita a tela grande da TV ou assista no Tablet, Laptop, Celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
         </div>
     </section>
 
+    
 </body>
 
 </html>
