--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
 <img src="img/Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
 </section>
 
+
+
+<section class="dispositivos">
+    <h2 class="dispositivos_titulo">Disponivel nos seus dispositivos favorito</h2>
+    <ul class="dispositivos_lista">
+        <li>
+            <img src="tv.png" alt="ìcone de televisão">
+            <h3 class="lista_item">TV</h3>
+        </li>
+    </ul>
+</section>
     
 </body>
 
