--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
             <img src="tv.png" alt="ìcone de televisão">
             <h3 class="lista_item">TV</h3>
         </li>
+        class="dispositivos_lista">
+        <li>
+            <img src="computador.png" alt="ìcone de computador">
+            <h3 class="lista_item">computador</h3>
+        </li>
+        class="dispositivos_lista">
+        <li>
+            <img src="celular.png" alt="ìcone de celular">
+            <h3 class="lista_item">celular</h3>
+        </li>
     </ul>
 </section>
     
