--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <p class="descricao__texto">Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser</p>
 <a href="www.alura.com.br" class="container__botao secundario__botao" container>Assine o Combo+</a>
 </div>
-<img src="img/Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
+<img src="Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
 </section>
 
 
@@ -49,12 +49,10 @@
             <img src="tv.png" alt="ìcone de televisão">
             <h3 class="lista_item">TV</h3>
         </li>
-        class="dispositivos_lista">
         <li>
             <img src="computador.png" alt="ìcone de computador">
             <h3 class="lista_item">computador</h3>
         </li>
-        class="dispositivos_lista">
         <li>
             <img src="celular.png" alt="ìcone de celular">
             <h3 class="lista_item">celular</h3>
