--- a/index.html
+++ b/index.html
@@ -60,6 +60,38 @@
     </ul>
 </section>
     
+<footer class="rodape">
+    <img src="Logo.png" alt="Alura+"
+    class="rodape_logo">
+    <ul class="lista_link">
+        <li class="lista_link">
+        <a href="#">Idioma</a>
+    </li>
+    <li class="lista_link">
+        <a href="#">dispositivos compatíveis</a>
+    </li>
+    <li class="lista_link">
+        <a href="#">contrato de assinatura</a>
+    </li>
+    <li class="lista_link">
+        <a href="#">Politica de privacidade</a>
+    </li>
+    <li class="lista_link">
+        <a href="#">Proteção de dados no Brasil</a>
+    </li>
+    <li class="lista_link">
+        <a href="#">Anuncios personalizados</a>
+    </li>
+    <li class="lista_link">
+        <a href="#"Ajuda></a>
+    </li>
+
+    </ul>
+    <p class="rodape_texto"> 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviços de assinatura paga. Conteúdo sujeitoa disponibilidade </p>
+    <p class="rodape_texto"> Alura+ é um serviço pago, baseado em assinatura e sujeito a termo e condições. O serviço Alura+ e comercializado por Aovs Sistema de Informática S.A., Rua Vergueiro, 3185- Liberdade, São Paulo- SP, 04101-300, Brasil e CNPJ 05.555.382/001-33</p>
+
+</footer>
+
 </body>
 
 </html>
